Change the name of the site on the /choices page

--- a/templates/choices.html
+++ b/templates/choices.html
@@ -7,7 +7,7 @@
     <h1>Choose an option</h1>
     <form method="GET" action="{{ url_for('parameters') }}">
         <button type="submit" name="choice" value="customize">Customize letter</button>
-        <button type="submit" name="choice" value="have letter.com write entire letter">Have letter.com write entire letter</button>
+        <button type="submit" name="choice" value="have letter.com write entire letter">Have https://coolexpert.pythonanywhere.com/ write entire letter</button>
     </form>
 </body>
 </html>
