--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -1,17 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Finalise</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}
+    Finalise
+{% endblock %}
+{% block content %}
     <h1>Finalise your letter</h1>
-        {{letter}}
-    <form method="POST" action="{{ url_for('letter') }}">
-        <input type="hidden" name="letter" value="{{ paragraphs }}">
-        <input type="checkbox" name="looks_good" value="true"> Looks good
-        <input type="checkbox" name="rewrite" value="true"> Rewrite
-        <br><br>
-        <input type="submit" value="Submit">
-    </form>
-</body>
-</html>
+    <textarea id="myTextArea" type="hidden" name="letter" rows="25" cols="120">{{letter}}</textarea>   
+    <br><br>
+    <button class="open-button submit-btn" type="button" onclick="downloadPDF()">Export to PDF</button>
+
+    <script>
+        function downloadPDF() {
+            var pdf = new jsPDF();
+            var elementHTML = document.getElementById("myTextArea").innerHTML;
+            var specialElementHandlers = {
+                '#elementHTML': function (element, renderer) {
+                    return true;
+                }
+            };
+            pdf.fromHTML(elementHTML, 15, 15, {
+                'width': 170,
+                'elementHandlers': specialElementHandlers
+            });
+            pdf.save("letter.pdf");
+        }
+    </script>
+{% endblock %}
