--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Parameters</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}
+    Set Parameters
+{% endblock %}
+{% block content %}
     <form method="POST" action="{{ url_for('parameters') }}">
         <h1>Enter parameters for your letter</h1>
         <label for="instruction">Instruction for the letter:</label>
         <input type="text" id="instruction" name="instruction">
-        <br>
+        <br><br>
         <label for="word_count">Word Count:</label>
         <input type="number" id="word_count" name="word_count">
         <br><br>
-        <input type="submit" value="Submit">
+        <button class="open-button submit-btn" type="submit">Submit</button>
     </form>
-</body>
-</html>
+{% endblock %}
