--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -12,6 +12,32 @@
         <label for="word_count">Word Count:</label>
         <input type="number" id="word_count" name="word_count">
         <br><br>
-        <button class="open-button submit-btn" type="submit">Submit</button>
+        <button id="submit-button" class="open-button submit-btn" type="submit">Submit</button>
     </form>
+    <div id="progress-container">
+        <p id="action-text">Letter Generator at work...</p>
+        <div id="progress-line" class="progress-bar">
+            <div class="progress"></div>
+        </div>
+    </div>
+
+
+    <script>
+        // Get the button and spinner elements
+        var submitBtn = document.getElementById("submit-button");
+        var progressBar = document.getElementById("progress-container");
+        var progressLine = document.getElementById("progress-line");
+        function showProgress() {
+            progressBar.style.display = "block";
+            setTimeout(() => {
+                progressLine.style.display = "none";
+                document.querySelector('.progress').style.animation = "none";
+                document.getElementById("action-text").innerHTML = "Done!"
+            }, 7000);
+        }
+        // Add a click event listener to the button
+        if(submitBtn){
+            submitBtn.addEventListener("click", showProgress, false);
+        }
+    </script>
 {% endblock %}
