--- a/templates/base.html
+++ b/templates/base.html
@@ -78,17 +78,17 @@
     }
 
     /* styles for progress bar */
-    #progress-container {
+    [id^='progress-container'] {
       display: none;
     }
-    .progress-bar {
+    [class^='progress-bar'] {
       width: 50%; /* adjust as needed */
       height: 30px; /* adjust as needed */
       background-color: #ddd;
       border-radius: 5px;
     }
   
-    .progress {
+    [class^='progress'] {
       width: 0%; /* initially set to 0% */
       height: 100%;
       background-color: #4CAF50; /* adjust as needed */
@@ -99,12 +99,28 @@
       from { width: 0%; }
       to { width: 100%; }
     }
+
+    /*css for rewritten */
+    [id^='tag'] {
+      position: relative;
+      bottom: 100px;
+      visibility: hidden;
+      border: 1px solid green;
+      border-radius: 6px;
+      padding: 3px;
+      background:rgb(137, 239, 137);
+    }
   </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
 </head>
 <body>
   {% block content %}
   {% endblock %}
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
   <!-- <script>
     function resizeTextArea(textArea) {
