--- a/templates/edit.html
+++ b/templates/edit.html
@@ -8,13 +8,20 @@
     <form method="POST" action={{ url_for('edit_para')}}>
         {% for paragraph in paragraphed_letter %}
                 <textarea rows="5" cols="80" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
+                <span id="tag-{{loop.index}}">Modified</span>
                 <br>
-                <button type="button" class="open-button" id="open-button-{{loop.index}}" onclick="openForm({{ loop.index }})">Re-write Paragraph</button>
+                <button type="button" class="open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Re-write Paragraph</button>
                 <div class="form-container" id="myForm-{{ loop.index }}">
                     <h5>Describe how to re-write.</h5>
                     <input type="text" placeholder="eg. Use stronger tone" name="instruction_{{ loop.index }}">        
-                    <button type="submit" id="para-submit-button-{{loop.index}}" class="btn">Re-write Now</button>
+                    <button type="button" id="para-submit-button-{{loop.index}}" class="btn" onclick="savePara({{loop.index}})">Re-write Now</button>
                     <button type="button" class="btn cancel" onclick="closeForm({{ loop.index }})">Back</button>
+                </div>
+                <div id="progress-container-{{loop.index}}">
+                    <p id="action-text-{{loop.index}}">Letter Generator at work...</p>
+                    <div id="progress-line-{{loop.index}}" class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
                 </div>
             <br><br>
         {% endfor %}
@@ -22,8 +29,35 @@
     </form>
 
     <script>
+        const toBeTagged = window.localStorage.getItem('modifiedList');
+        JSON.parse(toBeTagged) && JSON.parse(toBeTagged).forEach((index) => {
+            document.getElementById(`tag-${index}`).style.visibility = "visible";
+        });
+        function savePara(index) {
+            const modifiedList = JSON.parse(window.localStorage.getItem('modifiedList'));
+            if (modifiedList) {
+                modifiedList.push(index);
+                window.localStorage.setItem('modifiedList', JSON.stringify(modifiedList.push(index)));
+            } else {
+                window.localStorage.setItem('modifiedList', JSON.stringify([index]));
+            }
+        }
+        function showProgress(index) {
+            document.getElementById(`progress-container-${index}`).style.display = "block";
+            setTimeout(() => {
+                document.getElementById(`progress-line-${index}`).style.display = "none";
+                document.getElementById(`action-text-${index}`).style.display = "none";
+                document.querySelector('.progress').style.display = "none";
+                document.getElementById(`tag-${index}`).style.visibility = "visible";
+            }, 10000);
+        }
+        {% for paragraph in paragraphed_letter %}
+            var submitBtn = document.getElementById('para-submit-button-{{loop.index}}');
+            if(submitBtn){
+                submitBtn.addEventListener("click", () => showProgress({{loop.index}}), false);
+            }
+        {% endfor %}
         function openForm(id) {
-          console.log('some');
           document.getElementById(`myForm-${id}`).style.display = "block";
           document.getElementById(`open-button-${id}`).style.display = "none";
         }
