--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -5,14 +5,29 @@
 {% endblock %}
 {% block content %}
     <h1>Finalise your letter</h1>
-    <textarea id="finalLetter" type="hidden" name="letter" rows="25" cols="120">{{letter}}</textarea>   
-    <br><br>
+    <form method="POST" action={{url_for('finalise')}}>
+        <textarea id="finalLetter" type="hidden" name="letter" rows="25" cols="120" onchange="updateValue()">{{letter}}</textarea>   
+        <br><br>
+        <button type="button" class="open-button" id="open-button" onclick="openForm()">Re-write Paragraph</button>
+        <div class="form-container" id="letterForm">
+            <h5>Describe how to re-write.</h5>
+            <input type="text" placeholder="eg. Use stronger tone" name="instruction"></input>      
+            <button type="submit" id="para-submit-button" class="btn">Re-write Now</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Back</button>
+        </div>
+    </form>
     <button class="open-button submit-btn" type="button" onclick="downloadPDF()">Export to PDF</button>
 
     <script>
+        function updateValue() {
+            var inputValue = document.getElementById("finalLetter").value;
+        }
+        // clear local storage
+        window.localStorage.removeItem('modifiedList');
         function downloadPDF() {
             var pdf = new jsPDF("p", "mm", "a4");
-            var text = document.getElementById("finalLetter").innerHTML;
+            var text = document.getElementById("finalLetter").value;
+            console.log(text, 'will be printed');
             var paragraphs = text.split("\n\n");
 
             pdf.setFont("helvetica");
@@ -38,9 +53,18 @@
                     }
                 }
                 pdf.text(x, y, line);
-                y += lineHeight;
+                y += 1.5 * lineHeight;
             }
             pdf.save("final_letter.pdf");
+        }
+        function openForm() {
+          document.getElementById('letterForm').style.display = "block";
+          document.getElementById(`open-button`).style.display = "none";
+        }
+        
+        function closeForm() {
+          document.getElementById('letterForm').style.display = "none";
+          document.getElementById(`open-button`).style.display = "block";
         }
     </script>
 {% endblock %}
