--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,29 +4,36 @@
     Edit
 {% endblock %}
 {% block content %}
-    <h1>Edit your letter</h1>
-    <form method="POST" action={{ url_for('edit_para')}}>
-        {% for paragraph in paragraphed_letter %}
-                <textarea rows="5" cols="80" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
-                <span id="tag-{{loop.index}}">Modified</span>
-                <br>
-                <button type="button" class="open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Re-write Paragraph</button>
-                <div class="form-container" id="myForm-{{ loop.index }}">
-                    <h5>Describe how to re-write.</h5>
-                    <input type="text" placeholder="eg. Use stronger tone" name="instruction_{{ loop.index }}">        
-                    <button type="button" id="para-submit-button-{{loop.index}}" class="btn" onclick="savePara({{loop.index}})">Re-write Now</button>
-                    <button type="button" class="btn cancel" onclick="closeForm({{ loop.index }})">Back</button>
-                </div>
-                <div id="progress-container-{{loop.index}}">
-                    <p id="action-text-{{loop.index}}">Letter Generator at work...</p>
-                    <div id="progress-line-{{loop.index}}" class="progress-bar">
-                        <div class="progress"></div>
-                    </div>
-                </div>
-            <br><br>
-        {% endfor %}
-        <button type="submit" class="open-button submit-btn">Submit</button>
-    </form>
+    <div class="col-10">
+        <div class="card">
+            <h5 class="card-header text-center">Edit your letter</h5>
+            <div class="card-body">
+                <form method="POST" action={{ url_for('edit_para')}}>
+                    {% for paragraph in paragraphed_letter %}
+                        <div class="form-floating">
+                            <textarea rows="20" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
+                            <span id="tag-{{loop.index}}">Modified</span>
+                        </div>
+                        <button type="button" class="btn btn-primary open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Re-write Paragraph</button>
+                        <div class="form-container" id="myForm-{{ loop.index }}">
+                            <h5>Describe how to re-write.</h5>
+                            <input type="text" class="form-control" placeholder="eg. Use stronger tone" name="instruction_{{ loop.index }}">        
+                            <button type="submit" id="para-submit-button-{{loop.index}}" class="btn btn-info" onclick="savePara({{loop.index}})">Re-write Now</button>
+                            <button type="button" class="btn btn-primary cancel" onclick="closeForm({{ loop.index }})">Back</button>
+                        </div>
+                        <div id="progress-container-{{loop.index}}">
+                            <p id="action-text-{{loop.index}}">Letter Generator at work...</p>
+                            <div id="progress-line-{{loop.index}}" class="progress-bar">
+                                <div class="progress"></div>
+                            </div>
+                        </div>
+                        <br><br>
+                    {% endfor %}
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <script>
         const toBeTagged = window.localStorage.getItem('modifiedList');
@@ -37,7 +44,7 @@
             const modifiedList = JSON.parse(window.localStorage.getItem('modifiedList'));
             if (modifiedList) {
                 modifiedList.push(index);
-                window.localStorage.setItem('modifiedList', JSON.stringify(modifiedList.push(index)));
+                window.localStorage.setItem('modifiedList', JSON.stringify(modifiedList));
             } else {
                 window.localStorage.setItem('modifiedList', JSON.stringify([index]));
             }
