--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -4,19 +4,25 @@
     Finalise
 {% endblock %}
 {% block content %}
-    <h1>Finalise your letter</h1>
-    <form method="POST" action={{url_for('finalise')}}>
-        <textarea id="finalLetter" type="hidden" name="letter" rows="25" cols="120" onchange="updateValue()">{{letter}}</textarea>   
-        <br><br>
-        <button type="button" class="open-button" id="open-button" onclick="openForm()">Re-write Paragraph</button>
-        <div class="form-container" id="letterForm">
-            <h5>Describe how to re-write.</h5>
-            <input type="text" placeholder="eg. Use stronger tone" name="instruction"></input>      
-            <button type="submit" id="para-submit-button" class="btn">Re-write Now</button>
-            <button type="button" class="btn cancel" onclick="closeForm()">Back</button>
+<div class="col-8">
+    <div class="card">
+        <h5 class="card-header text-center">Finalise your letter</h5>
+        <div class="card-body">
+            <form method="POST" action={{url_for('finalise')}}>
+                <textarea id="finalLetter" type="hidden" name="letter" rows="25" class="form-control" onchange="updateValue()">{{letter}}</textarea>   
+                <br><br>
+                <button type="button" class="btn btn-primary open-button" id="open-button" onclick="openForm()">Re-write Paragraph</button>
+                <div class="form-container" id="letterForm">
+                    <h5>Describe how to re-write.</h5>
+                    <input type="text" placeholder="eg. Use stronger tone" class="form-control" name="instruction"></input>      
+                    <button type="submit" id="para-submit-button" class="btn btn-primary">Re-write Now</button>
+                    <button type="button" class="btn btn-dander cancel" onclick="closeForm()">Back</button>
+                </div>
+            </form>
+            <button class="btn btn-success open-button" type="button" onclick="downloadPDF()">Export to PDF</button>
         </div>
-    </form>
-    <button class="open-button submit-btn" type="button" onclick="downloadPDF()">Export to PDF</button>
+    </div>
+</div>
 
     <script>
         function updateValue() {
