--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -4,20 +4,28 @@
     Set Parameters
 {% endblock %}
 {% block content %}
-    <form method="POST" action="{{ url_for('parameters') }}">
-        <h1>Enter parameters for your letter</h1>
-        <label for="instruction">Instruction for the letter:</label>
-        <input type="text" id="instruction" name="instruction">
-        <br><br>
-        <label for="word_count">Word Count:</label>
-        <input type="number" id="word_count" name="word_count">
-        <br><br>
-        <button id="submit-button" class="open-button submit-btn" type="submit">Submit</button>
-    </form>
-    <div id="progress-container">
-        <p id="action-text">Letter Generator at work...</p>
-        <div id="progress-line" class="progress-bar">
-            <div class="progress"></div>
+    <div class="col-6">
+        <div class="card">
+            <h5 class="card-header text-center">Enter parameters for your letter</h5>
+            <div class="card-body">
+                <form method="POST" action="{{ url_for('parameters') }}">
+                    <div class="mb-3">
+                        <label for="instruction" class="form-label">Instruction for the letter:</label>
+                        <input type="text" class="form-control" id="instruction" name="instruction">
+                    </div>
+                    <div class="mb-3">
+                        <label for="word_count" class="form-label">Word Count:</label>
+                        <input type="number" id="word_count" name="word_count" class="form-control">
+                    </div>
+                    <button id="submit-button" class="btn btn-success open-button submit-btn" type="submit">Submit</button>
+                </form>
+                <div id="progress-container">
+                    <p id="action-text">Letter Generator at work...</p>
+                    <div id="progress-line" class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
