--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,17 @@
       padding: 3px;
       background:rgb(137, 239, 137);
     }
+    /* paragraph number styles */
+    .paragraph-number {
+      display: block;
+      width: 2rem;
+      height: 30px;
+      font-size: 20px;
+      background-color: rgb(20, 144, 20);
+      padding: 0px 10px;
+      border-radius: 15px;
+      color: white;
+    }
   </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
