--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -27,6 +27,8 @@
 
 
     <script>
+        // remove the existing modifiedList, in case it exists on the browser
+        window.localStorage.removeItem('modifiedList');
         // Get the button and spinner elements
         var submitBtn = document.getElementById("submit-button");
         var progressBar = document.getElementById("progress-container");
