--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,17 +4,17 @@
     Edit
 {% endblock %}
 {% block content %}
-    <div class="col-10">
+    <div class="col-8">
         <div class="card">
             <h5 class="card-header text-center">Edit your letter</h5>
             <div class="card-body">
                 <form method="POST" action={{ url_for('edit_para')}}>
                     {% for paragraph in paragraphed_letter %}
-                        <div class="form-floating">
-                            <textarea rows="20" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
+                        <div class="form-group">
+                            <textarea rows="4" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
                             <span id="tag-{{loop.index}}">Modified</span>
                         </div>
-                        <button type="button" class="btn btn-primary open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Re-write Paragraph</button>
+                        <button type="button" class="btn btn-sm btn-primary open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Re-write Paragraph</button>
                         <div class="form-container" id="myForm-{{ loop.index }}">
                             <h5>Describe how to re-write.</h5>
                             <input type="text" class="form-control" placeholder="eg. Use stronger tone" name="instruction_{{ loop.index }}">        
@@ -34,7 +34,20 @@
             </div>
         </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+    $(document).ready(function() {
+        {% for paragraph in paragraphed_letter %}
+            var textarea = $("#para_{{ loop.index }}");
+            console.log(textarea);
+            textarea.on("input", function() {
+            this.style.height = "";
+            this.style.height = this.scrollHeight + "px";
+            });
+            textarea.trigger("input");
+        {% endfor %}
+    });
+    </script>
     <script>
         const toBeTagged = window.localStorage.getItem('modifiedList');
         JSON.parse(toBeTagged) && JSON.parse(toBeTagged).forEach((index) => {
