Improve the message after loading is done

--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -38,7 +38,7 @@
             setTimeout(() => {
                 progressLine.style.display = "none";
                 document.querySelector('.progress').style.animation = "none";
-                document.getElementById("action-text").innerHTML = "Done!"
+                document.getElementById("action-text").innerHTML = "Done! Hang tight. You will be redirected in a moment..."
             }, 10000);
         }
         // Add a click event listener to the button
