--- a/templates/base.html
+++ b/templates/base.html
@@ -37,16 +37,14 @@
     }
     
     /* Full-width input fields */
-    .form-container input[type=text], .form-container input[type=password] {
-      width: 90%;
-      padding: 15px;
-      margin: 5px 0 22px 0;
+    .form-container input[type=text] {
+      margin: 10px 0px;
       border: none;
       background: #f1f1f1;
     }
     
     /* When the inputs get focus, do something */
-    .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    .form-container input[type=text]:focus {
       background-color: #ddd;
       outline: none;
     }
@@ -102,15 +100,13 @@
 
     /*css for rewritten */
     [id^='tag'] {
-      position: absolute;
-      top: -0.5rem;
-      left: -0.5rem;
-      font-size: 8px;
+      margin: 7px 7px;
+      font-size: 10px;
       visibility: hidden;
-      border: 1px solid green;
+      border: 1px solid rgb(7, 13, 180);
       border-radius: 6px;
       padding: 3px;
-      background:rgb(137, 239, 137);
+      background:rgb(163, 166, 238);
     }
     /* paragraph number styles */
     .paragraph-number {
