--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,33 +4,46 @@
     Edit
 {% endblock %}
 {% block content %}
-    <div class="col-8">
+    <div class="col-10">
         <div class="card">
             <h5 class="card-header text-center">Edit your letter</h5>
             <div class="card-body">
-                <form method="POST" action={{ url_for('edit_para')}}>
-                    {% for paragraph in paragraphed_letter %}
-                        <div class="form-group">
-                            <textarea rows="4" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
-                            <span id="tag-{{loop.index}}">Modified</span>
-                        </div>
-                        <button type="button" class="btn btn-sm btn-primary open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Re-write Paragraph</button>
-                        <div class="form-container" id="myForm-{{ loop.index }}">
-                            <h5>Describe how to re-write.</h5>
-                            <input type="text" class="form-control" placeholder="eg. Use stronger tone" name="instruction_{{ loop.index }}">        
-                            <button type="submit" id="para-submit-button-{{loop.index}}" class="btn btn-info" onclick="savePara({{loop.index}})">Re-write Now</button>
-                            <button type="button" class="btn btn-primary cancel" onclick="closeForm({{ loop.index }})">Back</button>
-                        </div>
-                        <div id="progress-container-{{loop.index}}">
-                            <p id="action-text-{{loop.index}}">Letter Generator at work...</p>
-                            <div id="progress-line-{{loop.index}}" class="progress-bar">
-                                <div class="progress"></div>
+                <div class="container">
+                    <form method="POST" action={{ url_for('edit_para')}}>
+                        {% for paragraph in paragraphed_letter %}
+                            <div class="row">
+                                <div class="col-1 align-self-center">
+                                    <span class="paragraph-number">{{ loop.index }}</span>
+                                </div>
+                                <div class="col-8">
+                                    <div class="form-group">
+                                        <textarea rows="4" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
+                                    </div>
+                                </div>
+                                <div class="col-3">
+                                    <button type="button" class="btn btn-sm btn-outline-success open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Edit</button>
+                                    <span id="tag-{{loop.index}}">Modified</span>
+                                    <div class="form-container" id="myForm-{{ loop.index }}">
+                                        <div>Describe how to re-write</div>
+                                        <div class="input-group input-group-sm">
+                                            <input type="text" class="form-control" placeholder="eg. Use stronger tone" name="instruction_{{ loop.index }}">        
+                                        </div>
+                                        <button type="button" class="btn btn-sm btn-primary cancel" onclick="closeForm({{ loop.index }})">Back</button>
+                                        <button type="submit" class="btn btn-sm btn-info" id="para-submit-button-{{loop.index}}" onclick="savePara({{loop.index}})">Re-write Now</button>
+                                    </div>
+                                    <div id="progress-container-{{loop.index}}">
+                                        <p id="action-text-{{loop.index}}">Letter Generator at work...</p>
+                                        <div id="progress-line-{{loop.index}}" class="progress-bar">
+                                            <div class="progress"></div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <br><br>
-                    {% endfor %}
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </form>
+                            <hr>
+                        {% endfor %}
+                        <button type="submit" class="btn btn-outline-primary">Submit</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
