Add progress bar on the finalize page and also add the modified tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,6 +108,14 @@
       padding: 3px;
       background:rgb(163, 166, 238);
     }
+    #modified-tag {
+      margin: 7px 7px;
+      font-size: 10px;
+      border: 1px solid rgb(7, 13, 180);
+      border-radius: 6px;
+      padding: 3px;
+      background:rgb(163, 166, 238);
+    }
     /* paragraph number styles */
     .paragraph-number {
       display: block;
