--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -4,13 +4,13 @@
     Set Parameters
 {% endblock %}
 {% block content %}
-    <div class="col-6">
+    <div class="col-12">
         <div class="card">
-            <h5 class="card-header text-center">What did you want to write about?</h5>
-            <u>Examples</u><br>
-            <br>Tell Joe that he owes me $100
-            <br>Write a very nice love letter to Sally
-            <br>Invite the president for dinner<br><br>
+            <h5 class="card-header text-center">Write something amazing in 10 seconds</h5>
+            <br><u>Examples</u>
+            <br>Write Jennifer a romantic letter
+            <br>Ask Joe to return your underwear in a funny tone
+            <br>Write a speech at a wedding<br>
 
 
     
