Create separate css folder

--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -8,9 +8,11 @@
         <div class="card">
             <h5 class="card-header text-center">What did you want to write about?</h5>
             <u>Examples</u><br>
-            <br>Tell Joe that he owes me $100
-            <br>Write a very nice love letter to Sally
-            <br>Invite the president for dinner<br><br>
+            <div class="my-green-div">
+                <br>Tell Joe that he owes me $100
+                <br>Write a very nice love letter to Sally
+                <br>Invite the president for dinner<br><br>
+            </div>
 
 
     
