--- a/templates/edit.html
+++ b/templates/edit.html
@@ -11,35 +11,50 @@
                 <div class="container">
                     <form method="POST" action={{ url_for('edit_para')}}>
                         {% for paragraph in paragraphed_letter %}
-                            <div class="row">
-                                <div class="col-1 align-self-center">
-                                    <span class="paragraph-number">{{ loop.index }}</span>
-                                </div>
-                                <div class="col-8">
-                                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-8">
+                               <div class="row">
+                                  <div class="col-1 align-self-center">
+                                     <span class="paragraph-number">{{ loop.index }}</span>
+                                  </div>
+                                  <div class="col-11">
+                                     <div class="form-group">
                                         <textarea rows="4" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <button type="button" class="btn btn-sm btn-outline-success open-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Edit</button>
-                                    <span id="tag-{{loop.index}}">Modified</span>
-                                    <div class="form-container" id="myForm-{{ loop.index }}">
+                                     </div>
+                                  </div>
+                               </div>
+                               <div class="row">
+                                  <div class="col-1">
+                                  </div>
+                                  <div class="col-11">
+                                     <div class="form-container" id="myForm-{{ loop.index }}">
                                         <div>Describe how to re-write</div>
                                         <div class="input-group input-group-sm">
-                                            <input type="text" class="form-control" placeholder="eg. Use stronger tone" name="instruction_{{ loop.index }}">        
+                                           <input type="text" class="form-control" placeholder="eg. Make this funny" name="instruction_{{ loop.index }}">        
                                         </div>
                                         <button type="button" class="btn btn-sm btn-primary cancel" onclick="closeForm({{ loop.index }})">Back</button>
                                         <button type="submit" class="btn btn-sm btn-info" id="para-submit-button-{{loop.index}}" onclick="savePara({{loop.index}})">Re-write Now</button>
-                                    </div>
-                                    <div id="progress-container-{{loop.index}}">
-                                        <p id="action-text-{{loop.index}}">Letter Generator at work...</p>
-                                        <div id="progress-line-{{loop.index}}" class="progress-bar">
-                                            <div class="progress"></div>
-                                        </div>
-                                    </div>
-                                </div>
+                                     </div>
+                                  </div>
+                               </div>
                             </div>
-                            <hr>
+                            <div class="col-4">
+                               <button type="button" class="btn btn-sm btn-outline-success open-button my-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Edit</button>
+                               <style>
+                                  .my-button {
+                                  width: 70px;
+                                  }
+                               </style>
+                               <span id="tag-{{loop.index}}">Modified</span>
+                               <div id="progress-container-{{loop.index}}">
+                                  <p id="action-text-{{loop.index}}">Generating...</p>
+                                  <div id="progress-line-{{loop.index}}" class="progress-bar">
+                                     <div class="progress"></div>
+                                  </div>
+                               </div>
+                            </div>
+                         </div>
+                         <hr>
                         {% endfor %}
                         <button type="submit" class="btn btn-outline-primary">Submit</button>
                     </form>
@@ -99,4 +114,11 @@
           document.getElementById(`open-button-${id}`).style.display = "block";
         }
     </script>
+
+
+    <style>
+        .btn btn-sm btn-outline-success open-button {
+          width: 70px;
+        }
+    </style>
 {% endblock %}
