--- a/templates/parameters.html
+++ b/templates/parameters.html
@@ -54,3 +54,17 @@
         }
     </script>
 {% endblock %}
+
+<style>
+  @media only screen and (max-width: 767px) {
+    .col-8 {
+      width: 100%;
+    }
+    textarea {
+      width: 100%;
+    }
+    .card {
+      padding: 20px;
+    }
+  }
+</style>
