--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   {% endblock %}
 </head>
 <body>
-  <div class="container">
+  <div class="container-md">
     <div class="row">
       <div class="col">
       </div>
