--- a/templates/edit.html
+++ b/templates/edit.html
@@ -12,33 +12,23 @@
                     <form method="POST" action={{ url_for('edit_para')}}>
                         {% for paragraph in paragraphed_letter %}
                         <div class="row">
-                            <div class="col-8">
-                               <div class="row">
-                                  <div class="col-1 align-self-center">
-                                     <span class="paragraph-number">{{ loop.index }}</span>
-                                  </div>
-                                  <div class="col-11">
-                                     <div class="form-group">
-                                        <textarea rows="4" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
-                                     </div>
-                                  </div>
-                               </div>
-                               <div class="row">
-                                  <div class="col-1">
-                                  </div>
-                                  <div class="col-11">
-                                     <div class="form-container" id="myForm-{{ loop.index }}">
-                                        <div>Describe how to re-write</div>
-                                        <div class="input-group input-group-sm">
-                                           <input type="text" class="form-control" placeholder="eg. Make this funny" name="instruction_{{ loop.index }}">        
-                                        </div>
-                                        <button type="button" class="btn btn-sm btn-primary cancel" onclick="closeForm({{ loop.index }})">Back</button>
-                                        <button type="submit" class="btn btn-sm btn-info" id="para-submit-button-{{loop.index}}" onclick="savePara({{loop.index}})">Re-write Now</button>
-                                     </div>
-                                  </div>
-                               </div>
+                            <div class="col-2 col-md-1 align-self-center">
+                               <span class="paragraph-number">{{ loop.index }}</span>
                             </div>
-                            <div class="col-4">
+                            <div class="col-10 col-md-9">
+                                <div class="form-group">
+                                    <textarea rows="4" class="form-control" name="para_{{ loop.index }}">{{ paragraph }}</textarea>
+                                </div>
+                                <div class="form-container" id="myForm-{{ loop.index }}">
+                                    <div>Describe how to re-write</div>
+                                    <div class="input-group input-group-sm">
+                                        <input type="text" class="form-control" placeholder="eg. Make this funny" name="instruction_{{ loop.index }}">        
+                                    </div>
+                                    <button type="button" class="btn btn-sm btn-primary cancel" onclick="closeForm({{ loop.index }})">Back</button>
+                                    <button type="submit" class="btn btn-sm btn-info" id="para-submit-button-{{loop.index}}" onclick="savePara({{loop.index}})">Re-write Now</button>
+                                </div>
+                            </div>
+                            <div class="col-md-1 self-align-center">
                                <button type="button" class="btn btn-sm btn-outline-success open-button my-button" id="open-button-{{loop.index}}" onclick="openForm({{loop.index}})">Edit</button>
                                <style>
                                   .my-button {
