--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -4,7 +4,7 @@
     Finalise
 {% endblock %}
 {% block content %}
-    <div class="col-8">
+    <div class="col-12 col-sm-12 col-md-10">
         <div class="card">
             <h5 class="card-header text-center">Finalise your letter</h5>
             <div class="card-body">
@@ -20,11 +20,14 @@
                         <div class="input-group input-group-sm">
                             <input type="text" placeholder="eg. Use stronger tone" class="form-control" id="instruction" name="instruction" onchange="onChange()" required></input>
                         </div>
-                        <button type="button" class="btn btn-sm btn-dander cancel" onclick="closeForm()">Back</button>
+                        <button type="button" class="btn btn-sm btn-danger cancel" onclick="closeForm()">Back</button>
                         <button type="submit" id="letter-submit-button" class="btn btn-sm btn-primary">Re-write Now</button>
                     </div>
                 </form>
                 <button class="btn btn-success open-button" type="button" onclick="downloadPDF()">Export to PDF</button>
+                <form action={{ url_for('edit_para') }} method="GET">
+                    <button type="submit" class="btn btn-sm btn-danger open-button">Back</button>
+                </form>
                 <div id="progress-container">
                     <p id="action-text">Letter Generator at work...</p>
                     <div id="letter-progress-line" class="progress-bar">
