Improve: Make the website more mobile friendly

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,13 @@
   {% endblock %}
 </head>
 <body>
-  <div class="container-md">
+  <div class="container-md content-box">
     <div class="row">
-      <div class="col">
+      <div class="col-12 col-lg-2">
       </div>
         {% block content %}
         {% endblock %}
-      <div class="col">
+      <div class="col-12 col-lg-2">
       </div>
     </div>
   </div>
