--- a/static/css/my_styles.css
+++ b/static/css/my_styles.css
@@ -126,3 +126,19 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .my-green-div {
   color: green;
 }
+
+.examples {
+  font-size: 0.8rem;
+}
+
+@media (min-width: 768px) {
+  body {
+    font-size: 1.5rem;
+    margin: 0px;
+  }
+  .container-md {
+    margin: 0px;
+    max-width: 100% !important;
+    width: 100%;
+  }
+}
