--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,11 +4,11 @@
     Edit
 {% endblock %}
 {% block content %}
-    <div class="col-10">
+    <div class="col-10 col-md-12 col-lg-8">
         <div class="card">
             <h5 class="card-header text-center">Edit your letter</h5>
             <div class="card-body">
-                <div class="container">
+                <div class="container-md">
                     <form method="POST" action={{ url_for('edit_para')}}>
                         {% for paragraph in paragraphed_letter %}
                         <div class="row">
