--- a/templates/finalise.html
+++ b/templates/finalise.html
@@ -4,7 +4,7 @@
     Finalise
 {% endblock %}
 {% block content %}
-    <div class="col-12 col-sm-12 col-md-10">
+    <div class="col-12 col-sm-12 col-md-12 col-lg-8">
         <div class="card">
             <h5 class="card-header text-center">Finalise your letter</h5>
             <div class="card-body">
